Changed submodule remote

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,5 @@
 [submodule "malware_test"]
 	path = malware_test
 	url = git@github.com:33onethird/malware-test.git
+[submodule "Submod"]
+	url = https://github.com/33onethird/malware-test
