Finally fixed submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "malware_test"]
 	path = malware_test
-	url = git@github.com:33onethird/malware-test.git
+	url = https://github.com/33onethird/malware-test
 [submodule "Submod"]
 	url = https://github.com/33onethird/malware-test
 [submodule "amalware_test"]
